changed challange pages

--- a/index.html
+++ b/index.html
@@ -198,67 +198,70 @@
           <hr style="border-color:#aaa;">
         </div>
         <div class="col-12">
-          <h4 style="color:white;" class="pt-4">Egitim</h4>
+          <h4 style="color:white;" class="pt-4">Eğitim</h4>
           <hr style="border-color:#666;">
           <div class="row">
             <div class="col-12 col-lg-6">
-              <h5>8 Subat Cuma</h5>
+              <h5>8 Şubat Cuma</h5>
               <hr style="border-color:#666;">
               <ul style="list-style:none; text-align:left; color: #eee;">
-                <li>08:30 - 09:00    &emsp;    Acilis</li>
-                <li>09:00 - 09:50    &emsp;    Raspberry Pi'a Giris</li>
-                <li>09:50 - 10:00    &emsp;    Ara</li>
-                <li>10:00 - 10:50    &emsp;    Programlamaya Giris</li>
-                <li>10:50 - 11:00    &emsp;    Ara</li>
-                <li>11:00 - 11:50    &emsp;    Programlamaya Giris</li>
-                <li>11:50 - 12:00    &emsp;    Ara</li>
-                <li>12:00 - 12:50    &emsp;    Raspberry Pi ile Temel Elektronik</li>
-                <li>12:50 - 13:30    &emsp;    Yemek</li>
-                <li>13:30 - 14:20    &emsp;    Raspberry Pi ile Temel Elektronik</li>
-                <li>14:20 - 14:30    &emsp;    Ara</li>
-                <li>14:30 - 15:20    &emsp;    Raspberry Pi ile Temel Elektronik</li>
-                <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                <li>08:30 - 09:00    &emsp;    Kayıt & Açılış</li>
+                <li>09:00 - 09:50    &emsp;    PiWars & Raspberry Pi & Robotik</li>
+                <li>09:50 - 10:10    &emsp;    Ara</li>
+                <li>10:10 - 11:00    &emsp;    Python ile Programlama 1</li>
+                <li>11:00 - 11:20    &emsp;    Ara</li>
+                <li>11:20 - 12:10    &emsp;    Python ile Programlama 2 </li>
+                <li>12:10 - 13:00    &emsp;    Yemek </li>
+                <li>13:00 - 13:50    &emsp;    Raspberry Pi ile Temel Elektronik 1</li>
+                <li>13:50 - 14:10    &emsp;    Ara</li>
+                <li>14:10 - 15:00    &emsp;    Raspberry Pi ile Temel Elektronik 2</li>
+                <li>15.00&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Çıkış</li>
               </ul>
             </div>
             <div class="col-12 col-lg-6">
-                <h5>9 Subat Cumartesi</h5>
+                <h5>9 Şubat Cumartesi</h5>
                 <hr style="border-color:#666;">
                 <ul style="list-style:none; text-align:left; color: #eee;">
-                    <li>08:30 - 09:00    &emsp;    Karsilama</li>
-                    <li>09:00 - 09:50    &emsp;    3 Boyutlu Tasarim'a Giris</li>
-                    <li>09:50 - 10:00    &emsp;    Ara</li>
-                    <li>10:00 - 10:50    &emsp;    Robot Kiti Kurulumu</li>
-                    <li>10:50 - 11:00    &emsp;    Ara</li>
-                    <li>11:00 - 11:50    &emsp;    Robotlarin Kodlanmasi</li>
-                    <li>11:50 - 12:00    &emsp;    Ara</li>
-                    <li>12:00 - 12:50    &emsp;    Robotlarin Kodlanmasi</li>
-                    <li>12:50 - 13:30    &emsp;    Yemek</li>
-                    <li>13:30 - 14:20    &emsp;    Robotlar Uzerinde Calisma</li>
-                    <li>14:20 - 14:30    &emsp;    Ara</li>
-                    <li>14:30 - 15:10    &emsp;    Robotlarin Parkurlarda Denenmesi</li>
-                    <li>15:10 - 15:30    &emsp;    Kapanis</li>
-                    <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                    <li>08:30 - 09:00    &emsp;    Kahvaltı & Gün Akışı </li>
+                    <li>09:00 - 09:50    &emsp;    3D Tasarım Eğitimi</li>
+                    <li>09:50 - 10:10    &emsp;    Ara</li>
+                    <li>10:10 - 11:00    &emsp;    Robotların Tasarımı</li>
+                    <li>11:00 - 11:20    &emsp;    Ara</li>
+                    <li>11:20 - 12:10    &emsp;    Robotların Programlanması</li>
+                    <li>12:10 - 13:00    &emsp;    Yemek</li>
+                    <li>13:00 - 13:50    &emsp;    Test ve Uygulama</li>
+                    <li>13:50 - 14:10    &emsp;    Ara</li>
+                    <li>14:10 - 15:00    &emsp;    Optimizasyon</li>
+                    <li>15:00 - 15:20    &emsp;    Ara</li>
+                    <li>15:20 - 16:00    &emsp;    Robotların Parkurda Denenmesi</li>
+                    <li>16:00 - 16:15    &emsp;    Geri Bildirim & Çıkış</li>
                 </ul>
               </div>
           </div>
         </div>
         <div class="col-12">
-          <h4 style="color:white;" class="pt-4">Yarisma</h4>
+          <h4 style="color:white;" class="pt-4">Yarışma</h4>
           <hr style="border-color:#666;">
           <div class="row">
               <div class="col-12 col-lg-6">
                 <h5>23 Mart Cumartesi</h5>
                 <hr style="border-color:#666;">
                 <ul style="list-style:none; text-align:left; color: #eee;">
-                    <li>09:00 - 09:30    &emsp;    Kayitlar</li>
-                    <li>09:30 - 13:00    &emsp;    Deneme Maclari</li>
-                    <li>13:00 - 14:00    &emsp;    Yemek</li>
-                    <li>14:00 - 15:30    &emsp;    Deneme Maclari</li>
-                    <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                    <li>08:30 - 09:00    &emsp;    Kayıt & Açılış</li>
+	                <li>09:00 - 09:50    &emsp;    Deneme Maçları</li>
+	                <li>09:50 - 10:10    &emsp;    Ara</li>
+	                <li>10:10 - 11:00    &emsp;    Deneme Maçları</li>
+	                <li>11:00 - 11:20    &emsp;    Ara</li>
+	                <li>11:20 - 12:10    &emsp;    Deneme Maçları </li>
+	                <li>12:10 - 13:00    &emsp;    Yemek </li>
+	                <li>13:00 - 13:50    &emsp;    Deneme Maçları</li>
+	                <li>13:50 - 14:10    &emsp;    Ara</li>
+	                <li>14:10 - 15:00    &emsp;    Deneme Maçları</li>
+	                <li>15.00&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Çıkış</li>
                 </ul>
               </div>
               <div class="col-12 col-lg-6">
-                  <h5>8 Subat Cuma</h5>
+                  <h5>8 Şubat Cuma</h5>
                   <hr style="border-color:#666;">
                   <ul style="list-style:none; text-align:left; color: #eee;">
                       <li>09:00 - 09:30    &emsp;    Kayitlar ve Yerlesme</li>
@@ -267,7 +270,7 @@
                       <li>13:00 - 14:00    &emsp;    Yemek</li>
                       <li>14:00 - 16:30    &emsp;    Maclar</li>
                       <li>16:30 - 17:30    &emsp;    Kapanis Konusmasi ve Odul Toreni</li>
-                      <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                      <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Çıkış</li>
                   </ul>
                 </div>
             </div>
