--- a/kurallar/duck.html
+++ b/kurallar/duck.html
@@ -67,7 +67,7 @@
   <div class="container-fluid greysegment p-4">
     <div class="row justify-content-center">
       <div class="col-12 col-md-4">
-        <img src="../img/balonsavaşı.jpg" style="width:100%;">
+        <img src="../img/duckshoot.png" style="width:100%;">
       </div>
       <div class="col-12 col-md-4">
         <h3>Görevin Amaci</h3>
@@ -79,16 +79,40 @@
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">Kurallar</h3>
-        <p> 1. Robotlar (sürücü tarafından) boyanmış tahta bir yüzeye, hedeflere bakacak şekilde yerleştirilecektir.<p>
-        <p> 2. Hedefler yer hizasından başlayacak ve 10 cm genişliğinde, 10-15 cm uzunluğu arasında olacaktır. Hedefler düz bir hizada dizilmiş olmayacaktır.<p>
-        <p> 3. Hedeflerin önünde robotların geçmesinin yasak olduğu bir sınır çizgisi olacak. Bu sınır çizgisi ve hedefler arasındaki mesafe 1-1.5 metredir.<p>
-        <p> 4. Hedefleri vurmak için iki yöntem vardır. Bu yöntemlerden sadece birini kullanabilirsiniz.<p>
+        <p> * Robotlar (sürücü tarafından) boyanmış tahta bir yüzeye, hedeflere bakacak şekilde yerleştirilecektir.<p>
+        <p> * Hedefler yer hizasından başlayacak ve 10 cm genişliğinde, 10-15 cm uzunluğu arasında olacaktır. Hedefler düz bir hizada dizilmiş olmayacaktır.<p>
+        <p> * Hedeflerin önünde robotların geçmesinin yasak olduğu bir sınır çizgisi olacak. Bu sınır çizgisi ve hedefler arasındaki mesafe 1-1.5 metredir.<p>
+        <p> * Hedefleri vurmak için iki yöntem vardır. Bu yöntemlerden sadece birini kullanabilirsiniz.<p>
         <p> a) Hepsi 63 mm çapta ve 70g olmak üzere beş topunuz olacak. Bunlar hedeflere doğru itelenebilir veya fırlatılabilir. Sınırı geçen toplar bir sonraki round başlamadan önce tekrar kullanılamazlar.<p>
         <p> b)Robotunuzda en fazla beş yumuşak mermi(Örneğin Nerf mermileri) fırlatan bir mekanizma olabilir.Eğer bu yöntemi kullanıyorsanız etrafta toplar olmayacak böylece rahatça manevra yapabileceksiniz. Sahaya basmadan atışlar arası yükleme yapabilirsiniz. Robotunuzu kendinize sürmeli, merminizi yüklemeli daha sonra atış yapacağınız yere gidip atış yapmalısınız.<p>
-        <p> 5. Sadece bir atış yöntemi kullanabilirsiniz. <p> 
-        <p> Üç deneme hakkınız vardır (her top/ mermi için).  Her denemeden sonra toplar ve hedefler (eğer kullanıldıysa) yenilenecektir. <p>
-        <p> 7. Toplar ve hedefler yenilenirken süre durdurulacaktır. Mermi yüklerken süre durdurulmayacaktır ancak hedefler ve toplar yenilenirken mermi yüklemenize izin verilmektedir.<p>
+        <p> * Sadece bir atış yöntemi kullanabilirsiniz. <p> 
+        <p> * Üç deneme hakkınız vardır (her top/ mermi için).  Her denemeden sonra toplar ve hedefler (eğer kullanıldıysa) yenilenecektir. <p>
+        <p> * Toplar ve hedefler yenilenirken süre durdurulacaktır. Mermi yüklerken süre durdurulmayacaktır ancak hedefler ve toplar yenilenirken mermi yüklemenize izin verilmektedir.<p>
           </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Sıralama ve Puanlar</h3>
+        <p> * Her turda en fazla beş hedef olmak üzere, her vurulmuş hedef için 9 puan kazanacaksınız.<p>
+        <p> * Eğer iki takım arasında bir eşitlik söz konusuysa yani iki takım da eşit miktarda hedef vurmuşsa daha hızlı olan takım sıralamada daha üstte olacak.<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Ek Puanlar</h3>
+        <p> * 5 topun da en az bir hedef vurması durumunda 10 ek puan verilecektir. <p>
+        <p> * Verilen topları kullanmayan her mekanizmaya 25 puan verilecektir.<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Cezalar</h3>
+        <p> * Eğer herhangi bir robotun tekerlekleri sınır çizgisini geçerse, atış geçersiz sayılacaktır. Bu durumda, 5 hesdef vurma ek puanı verilmeyecek. <p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">İpuçları</h3>
+        <p> * Hedef tahtalarını yok edebilecek güçlü lazerler kullanamazsınız.<p>
+        <p> * Sınır çizgisinin ilerisine atılan toplar önünüzde bir engel oluşturabilir. <p>
+        <p> * Hedefleri vurmak için çok büyük bir kuvvete ihtiyacınız olmayacaktır. Atış sistemlerinizi yaparken bunu göz önünde bulundurunuz. <p>
+        </p>
       </div>
     </div>
   </div>
