--- a/kurallar/maze.html
+++ b/kurallar/maze.html
@@ -67,7 +67,7 @@
   <div class="container-fluid greysegment p-4">
     <div class="row justify-content-center">
       <div class="col-12 col-md-4">
-        <img src="../img/balonsavaşı.jpg" style="width:100%;">
+        <img src="../img/maze.png" style="width:100%;">
       </div>
       <div class="col-12 col-md-4">
         <h3>Görevin Amacı</h3>
@@ -79,12 +79,29 @@
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">Kurallar</h3>
-        <p> 1. Bu bölümde, robotunuzun otonom olarak, tasarımı bilinmeyen bir labirentten çıkabilmesi gerekmektedir.<p>
-        <p> 2. Örnek bir labirent tasarımı temin edilecektir. Örnek tasarım, yarışmada kullanılacak labirent tasarımıyla birebir aynı olmayacak fakat size programınızın neye benzemesi gerektiğiyle ilgili fikir sunacaktır.  <p>
-        <p> 3. Bu görevde duvarlara dokunmak serbesttir ve puan kaybına yol açmayacaktır.  <p>
-        <p> 4. Labirentin yerleri yassı olacak. <p>
-
-          </p>
+        <p> * Bu bölümde, robotunuzun otonom olarak, tasarımı bilinmeyen bir labirentten çıkabilmesi gerekmektedir.<p>
+        <p> * Örnek bir labirent tasarımı temin edilecektir. Örnek tasarım, yarışmada kullanılacak labirent tasarımıyla birebir aynı olmayacak fakat size programınızın neye benzemesi gerektiğiyle ilgili fikir sunacaktır.  <p>
+        <p> * Bu görevde duvarlara dokunmak serbesttir ve puan kaybına yol açmayacaktır.  <p>
+        <p> * Labirentin yerleri yassı olacak. <p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Sıralama ve Puanlar</h3>
+        <p> Yarışmacılar, labirenti üç kere tamamlamanın sonundaki toplam süreye göre sıralanacaktır. Labirenti en kısa sürede tamamlayan robot birinci olacaktır.<p>
+        <p> Puanlama şu şekilde olacaktır: <p>
+        <p> 1. : 40 puan<p>
+        <p> 2. : 32 puan<p>
+        <p> 3. : 25 puan<p>
+        <p> 4. : 18 puan<p>
+        <p> 5. : 15 puan<p>
+        <p> 6. : 12 puan<p>
+        <p> 7. : 10 puan<p>
+        <p> 8. : 8 puan<p>
+        <p> 9. : 6 puan<p>
+        <p> 10. : 4 puan<p>
+        <p> 11. : 2 puan<p>
+        <p> 12. : 1 puan<p>
+        </p>
       </div>
     </div>
   </div>
