--- a/kurallar/obstacle.html
+++ b/kurallar/obstacle.html
@@ -67,7 +67,7 @@
   <div class="container-fluid greysegment p-4">
     <div class="row justify-content-center">
       <div class="col-12 col-md-4">
-        <img src="../img/balonsavaşı.jpg" style="width:100%;">
+        <img src="../img/ObstacleCourse.jpg" style="width:100%;">
       </div>
       <div class="col-12 col-md-4">
         <h3>Görevin Amaci</h3>
@@ -79,23 +79,46 @@
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">Kurallar</h3>
-        <p> 1. Her engel denenmelidir <p>
-        <p> 2. Tüm engellerin başarılı bir şekilde aşılması durumunda, 40 puan verilecektir. <p>
+        <p> * Her engel denenmelidir <p>
+        <p> * Tüm engellerin başarılı bir şekilde aşılması durumunda, 40 puan verilecektir. <p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Sıralama ve Puanlar</h3>
+        <p> Robotlar pisti tamamlama sürelerine göre sıralanacak ve puanlanacaktır. <p>
+        <p> 1. : 40 puan<p>
+        <p> 2. : 32 puan<p>
+        <p> 3. : 25 puan<p>
+        <p> 4. : 18 puan<p>
+        <p> 5. : 15 puan<p>
+        <p> 6. : 12 puan<p>
+        <p> 7. : 10 puan<p>
+        <p> 8. : 8 puan<p>
+        <p> 9. : 6 puan<p>
+        <p> 10. : 4 puan<p>
+        <p> 11. : 2 puan<p>
+        <p> 12. : 1 puan<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Ekstra Puanlar</h3>
+        <p> * Başarılı bir şekilde aşılan her engel için 20 puan verilecektir.  <p>
+        <p> * Tüm engellerin başarılı bir şekilde aşılması durumunda, 40 puan verilecektir.  <p>
         </p>
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">Penaltılar</h3>
-        <p> 1. Aşılmayan her engel için, toplam süreye 20 saniye eklenecektir. <p>
-        <p> 2. Bir engeli tekrar denemek gibi robotunuza yapılan yardımlara penaltı yazılmayacaktır ancak size zaman kaybettirecektir.  <p>
+        <p> * Aşılmayan her engel için, toplam süreye 20 saniye eklenecektir. <p>
+        <p> * Bir engeli tekrar denemek gibi robotunuza yapılan yardımlara penaltı yazılmayacaktır ancak size zaman kaybettirecektir.  <p>
         </p>
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">İpuçları</h3>
-        <p> 1. Sahada yürüyemezsiniz.<p>
-        <p> 2. Denemeye başlamadan önce, bütün sahayı görebileceğiniz bir yerde ve pozisyonda durun. <p>
-        <p> 3. Süre başladıktan sonra da saha etrafında yürüyebilirsiniz.  <p> 
-        <p> 4. Ağırlık merkezi yukarıda olan robotlar bu görevde zorlanabilir, ağırlık merkezinizi aşağıda tutmaya dikkat etmeniz tavsiye edilir.<p>  
-        <p> 5. Geçmiş yarışlarda, sıkı kavrayabilen ve ramplara çıkabilen robotların daha başarılı olduğu gözlemlenmiştir.<p> 
+        <p> * Sahada yürüyemezsiniz.<p>
+        <p> * Denemeye başlamadan önce, bütün sahayı görebileceğiniz bir yerde ve pozisyonda durun. <p>
+        <p> * Süre başladıktan sonra da saha etrafında yürüyebilirsiniz.  <p> 
+        <p> * Ağırlık merkezi yukarıda olan robotlar bu görevde zorlanabilir, ağırlık merkezinizi aşağıda tutmaya dikkat etmeniz tavsiye edilir.<p>  
+        <p> * Geçmiş yarışlarda, sıkı kavrayabilen ve ramplara çıkabilen robotların daha başarılı olduğu gözlemlenmiştir.<p> 
         </p>
       </div>
     </div>
