--- a/kurallar/proximity.html
+++ b/kurallar/proximity.html
@@ -62,35 +62,49 @@
   </nav>
   <div class="container-fluid imgBanner" style="text-align: center; padding-top:10vh; padding-bottom: 10vh;">
     <h1>Proximity Alert | Yakınlık Alarmı</h1>
-    <h3>Bir duvara çarpmadan olabildiğince yaklaş</h3>
+    <h3>Duvara çarpmadan olabildiğince yaklaş</h3>
   </div>
   <div class="container-fluid greysegment p-4">
     <div class="row justify-content-center">
       <div class="col-12 col-md-4">
-        <img src="../img/balonsavaşı.jpg" style="width:100%;">
+        <img src="../img/ProximityAlert.png" style="width:100%;">
       </div>
       <div class="col-12 col-md-4">
         <h3>Görevin Amaci</h3>
-        <p>Rakip takımın balonlarını patlatmak</p>
+        <p>Robotunuzun otonom olarak 1m uzaklıktaki bir duvara çarpmadan olabildiğince yaklaşması </p>
         <h3>Kontrol Metodu</h3>
-        <p>Uzaktan Kumanda</p>
+        <p>Otonom</p>
         <h3>Süre</h3>
-        <p>Düello başına 3 dakika</p>
+        <p>5 dakika</p>
       </div>
       <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Kurallar</h3>
-        <p> 1. İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecektir.<p>
-        <p> 2. Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır. <p>
-        <p> 3. Düellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır. <p>
-        <p> 4. Yarışmacılar arenanın içine giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin sonuçlarında düellonun kaybedilmesi durumu olabilir.<p>
-        <p> 5. Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız mağlup sayılıcaktır.
-        <p> 6. Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir. <p>
-        <p> 7. Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevidir. <p>
-        <p>8. Hakemin kararı sondur.<p>
-        <p>a) Lütfen tarışmayın - unutmayın, bu yarışmaların amacı eğlenmektir. <p>
-        <p>b) Takımınızdan birinin düelloyu kayıt etmesi (bir telefonla olabilir) tavsiye edilir. Bu sayede, hakem görsel kanıtlardan yararlanabilir. <p>
-
-          </p>
+        <h3 style="text-align: center;">Sıralama ve Puanlar</h3>
+        <p> Robot ile duvar arasındaki kalan mesafeler ölçülecek ve toplanacaktır. Robotlar toplam mesafeye göre sıralanacak ve duvarla arasında en az mesafe olan robot birinci sayılacaktır. Puanlama aşağıdaki şekilde gerçekleşecektir:<p>
+        <p> 1. : 40 puan<p>
+        <p> 2. : 32 puan<p>
+        <p> 3. : 25 puan<p>
+        <p> 4. : 18 puan<p>
+        <p> 5. : 15 puan<p>
+        <p> 6. : 12 puan<p>
+        <p> 7. : 10 puan<p>
+        <p> 8. : 8 puan<p>
+        <p> 9. : 6 puan<p>
+        <p> 10. : 4 puan<p>
+        <p> 11. : 2 puan<p>
+        <p> 12. : 1 puan<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Ek Puan</h3>
+        <p> Her başarılı yaklaşma ve durma 5 puan değerindedir.<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Cezalar</h3>
+        <p> * Robotun her duvara değişinde, toplam mesafeye 30 cm eklenecektir.<p>
+        <p> * Robotun duvara yaklaşamadığı her denemede, toplam mesafeye 30 cm eklenecektir. <p>
+        <p> * Eğer süreniz dolarsa, veya herhangi bir sebepten dolayı görevi yarım bırakmanız gerekirse, kalan her deneme için toplam mesafeye 50 cm eklenecektir. <p>
+        </p>
       </div>
     </div>
   </div>
