--- a/kurallar/pinoon.html
+++ b/kurallar/pinoon.html
@@ -79,18 +79,43 @@
       </div>
       <div class="col-12 col-md-8">
         <h3 style="text-align: center;">Kurallar</h3>
-        <p> 1. İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecektir.<p>
-        <p> 2. Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır. <p>
-        <p> 3. Düellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır. <p>
-        <p> 4. Yarışmacılar arenanın içine giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin sonuçlarında düellonun kaybedilmesi durumu olabilir.<p>
-        <p> 5. Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız mağlup sayılıcaktır.
-        <p> 6. Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir. <p>
-        <p> 7. Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevidir. <p>
-        <p>8. Hakemin kararı sondur.<p>
+        <p> * İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecektir.<p>
+        <p> * Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır. <p>
+        <p> * Düellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır. <p>
+        <p> * Yarışmacılar arenanın içine giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin sonuçlarında düellonun kaybedilmesi durumu olabilir.<p>
+        <p> * Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız mağlup sayılıcaktır.
+        <p> * Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir. <p>
+        <p> * Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevidir. <p>
+        <p> * Hakemin kararı sondur.<p>
         <p>a) Lütfen tarışmayın - unutmayın, bu yarışmaların amacı eğlenmektir. <p>
         <p>b) Takımınızdan birinin düelloyu kayıt etmesi (bir telefonla olabilir) tavsiye edilir. Bu sayede, hakem görsel kanıtlardan yararlanabilir. <p>
-
-          </p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Ek Parça</h3>
+        <p> * Robotunuz, çapı 3 mm olan bir teli yerden 1 cm yukarıda tutabiliyor olaması gerekir. <p>
+        <p> * Tel robotunuzun önüne, ortaya, önünde başka bir şey olmayacak şekilde takılmalıdır.<p>
+        <p> a) Telin ağırlığı yaklaşık olarak bir askının ağırlığının yarısı kadar olacaktır.<p>
+        <p> b) Tel size yarışma gününde verilecektir.<p>
+        <p> c) Telin sadece görev sırasında robotun üstünde bulunması yeter.<p>
+        <p> d) Eğer tel robottan düşerse en fazla 2 kere teli robotunuza geri takmanıza izin verilecektir.<p>
+        <p> e) Eğer tel 3. kere düşerse, turu kaybetmiş sayılacaksınız.<p>
+        <p> f) Düşen teli ve robotu sahadan alma yetkisi sadece oyunun hakemindedir.<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">Puanlama</h3>
+        <p> * Her turun kazananı 30 puan alacak ve bir sonraki tura katılma hakkı kazanacaktır. <p>
+        <p> * Finalist 25 bonus puan kazanacaktır <p>
+        <p> * Finalin kazananı 40 bonus puan alacaktır.<p>
+        </p>
+      </div>
+      <div class="col-12 col-md-8">
+        <h3 style="text-align: center;">İpuçları</h3>
+        <p> * Ek parça (tel) robotun denge merkezini yükselterek dengeyi bozabilir. Robotunuzu tasarlarken bunu aklınızda bulundurun.<p>
+        <p> * Ek parçanın takılacağı kısmı robotunuza sağlam taktığınıza emin olun.<p>
+        <p> * PiWars’ın temin ettiği ek parça tutucusunu kullanmak zorunda değilsiniz, fakat kullanacağınız parçanın kablonun dönmesine izin vermediğine emin olmanızı şiddetle öneririz çünkü dönen kablolar robotun ağırlık merkezini değiştirerek nişan almayı çok zorlaştırıyor. <p>
+        </p>
       </div>
     </div>
   </div>
