--- a/kurallar/maze.html
+++ b/kurallar/maze.html
@@ -1,126 +1,144 @@
 <!DOCTYPE html>
 <head>
-  <title>Pi Wars Turkey Kurallar</title>
-  <!-- Language Tag -->
-  <meta name="language" content="English"> 
+<title>Pi Wars Turkey Kurallar</title>
+<!-- Language Tag -->
+<meta name="language" content="English">
 
-  <!-- Style Meta Tags -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Style Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO Meta Tags -->
-  <meta name="keywords" content=""/>
+<!-- SEO Meta Tags -->
+<meta name="keywords" content="" />
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="Pi Wars Turkey" />
-  <meta property="og:type" content="site" />
-  <meta property="og:url" content="https://piwarsturkey.com" />
-  <meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
-  <meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" /> 
-  <meta property="og:site_name" content="Pi Wars Turkey" />
-  
-  <!-- Latest compiled and minified Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!-- Open Graph data -->
+<meta property="og:title" content="Pi Wars Turkey" />
+<meta property="og:type" content="site" />
+<meta property="og:url" content="https://piwarsturkey.com" />
+<meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
+<meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" />
+<meta property="og:site_name" content="Pi Wars Turkey" />
 
-  <!-- Latest compiled and minified Bootstrap JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<!-- Latest compiled and minified Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+>
 
-  <!-- Fonts -->
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<!-- Latest compiled and minified Bootstrap JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"
+></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"
+></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Latest Fontawesome CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<!-- Fonts -->
+<link rel="dns-prefetch" href="//fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
-  <!-- PiWarsTurkey main stylesheet -->
-  <link rel="stylesheet" href="../css/style2.css">
-  <link rel="stylesheet" href="../css/fontsize.css">
+<!-- Latest Fontawesome CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
-  <!-- PiWarsTurkey main script -->
-  <script src="../js/main.js"></script>
+<!-- PiWarsTurkey main stylesheet -->
+<link rel="stylesheet" href="../css/style2.css">
+<link rel="stylesheet" href="../css/fontsize.css">
+
+<!-- PiWarsTurkey main script -->
+<script src="../js/main.js"></script>
 </head>
 
 <body>
-  <!-- Image and text -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Ana Sayfa</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container-fluid imgBanner" style="text-align: center; padding-top:10vh; padding-bottom: 10vh;">
-    <h1>Maze | Labirent</h1>
-    <h3>Labirenti en kısa sürede tamamla</h3>
-  </div>
-  <div class="container-fluid greysegment p-4">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-4">
-        <img src="../img/maze.png" style="width:100%;">
-      </div>
-      <div class="col-12 col-md-4">
-        <h3>Görevin Amacı</h3>
-        <p>Bir kabirenti olabildiğince hızlı tamamlamak. </p>
-        <h3>Kontrol Metodu</h3>
-        <p>Otonom</p>
-        <h3>Süre</h3>
-        <p>7 dakika</p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Kurallar</h3>
-        <p> * Bu bölümde, robotunuzun otonom olarak, tasarımı bilinmeyen bir labirentten çıkabilmesi gerekmektedir.<p>
-        <p> * Örnek bir labirent tasarımı temin edilecektir. Örnek tasarım, yarışmada kullanılacak labirent tasarımıyla birebir aynı olmayacak fakat size programınızın neye benzemesi gerektiğiyle ilgili fikir sunacaktır.  <p>
-        <p> * Bu görevde duvarlara dokunmak serbesttir ve puan kaybına yol açmayacaktır.  <p>
-        <p> * Labirentin yerleri yassı olacak. <p>
-        </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Sıralama ve Puanlar</h3>
-        <p> Yarışmacılar, labirenti üç kere tamamlamanın sonundaki toplam süreye göre sıralanacaktır. Labirenti en kısa sürede tamamlayan robot birinci olacaktır.<p>
-        <p> Puanlama şu şekilde olacaktır: <p>
-        <p> 1. : 40 puan<p>
-        <p> 2. : 32 puan<p>
-        <p> 3. : 25 puan<p>
-        <p> 4. : 18 puan<p>
-        <p> 5. : 15 puan<p>
-        <p> 6. : 12 puan<p>
-        <p> 7. : 10 puan<p>
-        <p> 8. : 8 puan<p>
-        <p> 9. : 6 puan<p>
-        <p> 10. : 4 puan<p>
-        <p> 11. : 2 puan<p>
-        <p> 12. : 1 puan<p>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-      <div class="row justify-content-center p-0" style="text-align: center;">
-        <div class="col-12 col-md-3 p-4">
-          Copyright &copy 2018 Hisar CS
-        </div>
-        <div class="col-12 col-lg-3 col-md-4 p-4">
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png" style="width: 45px; height: 45px"></a>
-        </div>
-        <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
-          <a class="back-to-top" href="#top">
-            <i class="fa fa-angle-up" style="font-size: 3vw;"></i><br>
-            Back To Top
-          </a>
-        </div>
-      </div>
-    </div>
+	<!-- Image and text -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+		<a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active"><a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="/">Ana Sayfa</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container-fluid imgBanner" style="text-align: center; padding-top: 10vh; padding-bottom: 10vh;">
+		<h1>Maze | Labirent</h1>
+		<h3>Labirenti en kısa sürede tamamla</h3>
+	</div>
+	<div class="container-fluid greysegment p-4">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-4">
+				<img src="../img/maze.png" style="width: 100%;">
+			</div>
+			<div class="col-12 col-md-4">
+				<h3>Görevin Amacı</h3>
+				<p>Bir kabirenti olabildiğince hızlı tamamlamak.</p>
+				<h3>Kontrol Metodu</h3>
+				<p>Otonom</p>
+				<h3>Süre</h3>
+				<p>7 dakika</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Kurallar</h3>
+				<p>* Bu bölümde, robotunuzun otonom olarak, tasarımı bilinmeyen bir labirentten çıkabilmesi gerekmektedir.
+				<p>
+				<p>* Örnek bir labirent tasarımı temin edilecektir. Örnek tasarım, yarışmada kullanılacak labirent tasarımıyla birebir aynı olmayacak fakat size programınızın neye
+					benzemesi gerektiğiyle ilgili fikir sunacaktır.
+				<p>
+				<p>* Bu görevde duvarlara dokunmak serbesttir ve puan kaybına yol açmayacaktır.
+				<p>
+				<p>* Labirentin yerleri yassı olacak.
+				<p></p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Sıralama ve Puanlar</h3>
+				<p>Yarışmacılar, labirenti üç kere tamamlamanın sonundaki toplam süreye göre sıralanacaktır. Labirenti en kısa sürede tamamlayan robot birinci olacaktır.
+				<p>
+				<p>Puanlama şu şekilde olacaktır:
+				<p>
+				<p>1. : 40 puan
+				<p>
+				<p>2. : 32 puan
+				<p>
+				<p>3. : 25 puan
+				<p>
+				<p>4. : 18 puan
+				<p>
+				<p>5. : 15 puan
+				<p>
+				<p>6. : 12 puan
+				<p>
+				<p>7. : 10 puan
+				<p>
+				<p>8. : 8 puan
+				<p>
+				<p>9. : 6 puan
+				<p>
+				<p>10. : 4 puan
+				<p>
+				<p>11. : 2 puan
+				<p>
+				<p>12. : 1 puan
+				<p></p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row justify-content-center p-0" style="text-align: center;">
+			<div class="col-12 col-md-3 p-4">Copyright &copy 2018 Hisar CS</div>
+			<div class="col-12 col-lg-3 col-md-4 p-4">
+				<a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a> <a
+					href="https://www.facebook.com/hisarcs" class="p-2"
+				><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a> <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png"
+					style="width: 45px; height: 45px"
+				></a>
+			</div>
+			<div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align: center;">
+				<a class="back-to-top" href="#top"> <i class="fa fa-angle-up" style="font-size: 3vw;"></i>
+				<br> Back To Top
+				</a>
+			</div>
+		</div>
+	</div>
 </body>
