--- a/kurallar/genel.html
+++ b/kurallar/genel.html
@@ -1,135 +1,140 @@
 <!DOCTYPE html>
 <head>
-  <title>Pi Wars Turkey Kurallar</title>
-  <!-- Language Tag -->
-  <meta name="language" content="English"> 
+<title>Pi Wars Turkey Kurallar</title>
+<!-- Language Tag -->
+<meta name="language" content="English">
 
-  <!-- Style Meta Tags -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Style Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO Meta Tags -->
-  <meta name="keywords" content=""/>
+<!-- SEO Meta Tags -->
+<meta name="keywords" content="" />
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="Pi Wars Turkey" />
-  <meta property="og:type" content="site" />
-  <meta property="og:url" content="https://piwarsturkey.com" />
-  <meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
-  <meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" /> 
-  <meta property="og:site_name" content="Pi Wars Turkey" />
-  
-  <!-- Latest compiled and minified Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!-- Open Graph data -->
+<meta property="og:title" content="Pi Wars Turkey" />
+<meta property="og:type" content="site" />
+<meta property="og:url" content="https://piwarsturkey.com" />
+<meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
+<meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" />
+<meta property="og:site_name" content="Pi Wars Turkey" />
 
-  <!-- Latest compiled and minified Bootstrap JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<!-- Latest compiled and minified Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+>
 
-  <!-- Fonts -->
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<!-- Latest compiled and minified Bootstrap JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"
+></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"
+></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Latest Fontawesome CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<!-- Fonts -->
+<link rel="dns-prefetch" href="//fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
-  <!-- PiWarsTurkey main stylesheet -->
-  <link rel="stylesheet" href="../css/style2.css">
-  <link rel="stylesheet" href="../css/fontsize.css">
+<!-- Latest Fontawesome CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
-  <!-- PiWarsTurkey main script -->
-  <script src="../js/main.js"></script>
+<!-- PiWarsTurkey main stylesheet -->
+<link rel="stylesheet" href="../css/style2.css">
+<link rel="stylesheet" href="../css/fontsize.css">
+
+<!-- PiWarsTurkey main script -->
+<script src="../js/main.js"></script>
 </head>
 
 <body>
-  <!-- Image and text -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Ana Sayfa</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container-fluid imgBanner" style="text-align: center; padding-top:10vh; padding-bottom: 10vh;">
-    <h1>Genel Kurallar</h1>
-    <h3>Lütfen kuralları dikkatlice okuyunuz. </h3>
-  </div>
-  <div class="container-fluid greysegment p-4">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-4">
-        <img src="../img/GeneralRules.png" style="width:100%;">
-      </div>
-      <div class="col-12 col-md-4">
-        <h3>Takım Kuralları</h3>
-        <p>* 18 yaşının altındaki yarışmacılar sorumlu bir öğretmen ile birlikte katılmalıdır. </p>
-        <p>* Eğitime katılan takımların yarışmaya da katılması beklenmektedir. </p>
-        <p>* Takımlar üçer kişiden oluşmalıdır.  </p>
-        <p>* Tüm robotlar kapalı veya çalışma odalarında blokların üzerinde kalmalıdır. Bu, sürücü kontrolü karışıklıkları veya otonom/sürücü kontrolü hatalarının robotun masadan düşmesine, veya herhangi bir şekilde zarar görmesini engellemek için yapılır. </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Çekirdekte Raspberry Pi</h3>
-        <p>* Tüm robotların çekirdeğinde Raspberry Pi bulunmalı ve kodlama işlemlerinin büyük çoğunluğunun bu RasPi üzerinden gerçekleşmesi gerekir. </p>
-        <p>* Arduino, micro:bit gibi başka mikro kontrol cihazları robotta kullanılabilir ancak genel kontrolün Raspberry Pi üzerinden yürütülmesi gerekir. </p>
-        <p>* Kumanda, bilgisayar, cep telefonu veya tablet gibi cihazlar robotu kontrol ederken kullanılabilirler, ancak yarışma sırasında fiziksel olarak robota bağlı olmamaları gerekir.</p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Güç</h3>
-        <p>* Tüm robotlar pillerle çalışmalıdır. </p>
-        <p>* Pil paketlerini şarj etmek için şebeke gücü kullanılabilir. </p>
-        <p>* Eğer LiPo pilleri kullanılıyorsa, her/herhangi şarj etme işlemi mutlaka ateşe dayanıklı bir çanta içerisinde yapılmalıdır. Bu çantalar (poşetler) bir çok pil satan yerlerde olabilir. Bu, kazaları önlemek içindir.</p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Robot Tipleri</h3>
-        <p>* Uçan robotlara izin verilmez, örn. dronlar. </p>
-        <p>* Yürüyen ve kendini dengeleyebilen robotlara izin verilir. </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Büyüklük</h3>
-        <p>* Yarışan robotların temel şasisi (tekerlekler ve çıkıntılar dahil olmak üzere) 225mm x 300mm’e sığmalıdır. </p>
-        <p>a) Maksimum genişlik (en) 225mm’den fazla olmamalıdır. </p>
-        <p>b) Maksimum uzunluk (boy) 300mm’den fazla olmamalıdır </p>
-        <p>* Spesifik görevler için robotlara önü en fazla 100mm büyütecek ek parçalar eklenebilir. Bu sebeple, üstüne ek parçalar ekli olan bir robotun en büyük boyutları 225 mm x 400 mm olabilir.</p>
-        <p>* Bir yükseklik limiti olmasa da lütfen ağırlık merkezi yukarıda olan robotların zorlanabileceklerini unutmayınız!  </p>
-        <p>* Ek parça eklerken, ana şasi, Raspberry Pi ve kumanda düzenlemeleri aynı kalmalıdır.  </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Duman ve Ateş</h3>
-        <p>* Yarışmanın teması ne olursa olsun, robotunuz bilinçli olarak duman veya ateş yaymamalıdır. </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Görevler</h3>
-        <p>* Robotunuzu test edebileceğiniz birden fazla görev olacak ve her birinin sonucu net skorunuza katkıda bulunacaktır. </p>
-        <p>* Hiçbir görev zorunlu değildir.  </p>
-        <p>* Katılmadığınız görevlerden puan kazanamazsınız. </p>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-      <div class="row justify-content-center p-0" style="text-align: center;">
-        <div class="col-12 col-md-3 p-4">
-          Copyright &copy 2018 Hisar CS
-        </div>
-        <div class="col-12 col-lg-3 col-md-4 p-4">
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png" style="width: 45px; height: 45px"></a>
-        </div>
-        <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
-          <a class="back-to-top" href="#top">
-            <i class="fa fa-angle-up" style="font-size: 3vw;"></i><br>
-            Back To Top
-          </a>
-        </div>
-      </div>
-    </div>
+	<!-- Image and text -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+		<a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active"><a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="/">Ana Sayfa</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container-fluid imgBanner" style="text-align: center; padding-top: 10vh; padding-bottom: 10vh;">
+		<h1>Genel Kurallar</h1>
+		<h3>Lütfen kuralları dikkatlice okuyunuz.</h3>
+	</div>
+	<div class="container-fluid greysegment p-4">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-4">
+				<img src="../img/GeneralRules.png" style="width: 100%;">
+			</div>
+			<div class="col-12 col-md-4">
+				<h3>Takım Kuralları</h3>
+				<p>* 18 yaşının altındaki yarışmacılar sorumlu bir öğretmen ile birlikte katılmalıdır.</p>
+				<p>* Eğitime katılan takımların yarışmaya da katılması beklenmektedir.</p>
+				<p>* Takımlar üçer kişiden oluşmalıdır.</p>
+				<p>* Tüm robotlar kapalı veya çalışma odalarında blokların üzerinde kalmalıdır. Bu, sürücü kontrolü karışıklıkları veya otonom/sürücü kontrolü hatalarının robotun masadan
+					düşmesine, veya herhangi bir şekilde zarar görmesini engellemek için yapılır.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Çekirdekte Raspberry Pi</h3>
+				<p>* Tüm robotların çekirdeğinde Raspberry Pi bulunmalı ve kodlama işlemlerinin büyük çoğunluğunun bu RasPi üzerinden gerçekleşmesi gerekir.</p>
+				<p>* Arduino, micro:bit gibi başka mikro kontrol cihazları robotta kullanılabilir ancak genel kontrolün Raspberry Pi üzerinden yürütülmesi gerekir.</p>
+				<p>* Kumanda, bilgisayar, cep telefonu veya tablet gibi cihazlar robotu kontrol ederken kullanılabilirler, ancak yarışma sırasında fiziksel olarak robota bağlı olmamaları
+					gerekir.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Güç</h3>
+				<p>* Tüm robotlar pillerle çalışmalıdır.</p>
+				<p>* Pil paketlerini şarj etmek için şebeke gücü kullanılabilir.</p>
+				<p>* Eğer LiPo pilleri kullanılıyorsa, her/herhangi şarj etme işlemi mutlaka ateşe dayanıklı bir çanta içerisinde yapılmalıdır. Bu çantalar (poşetler) bir çok pil satan
+					yerlerde olabilir. Bu, kazaları önlemek içindir.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Robot Tipleri</h3>
+				<p>* Uçan robotlara izin verilmez, örn. dronlar.</p>
+				<p>* Yürüyen ve kendini dengeleyebilen robotlara izin verilir.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Büyüklük</h3>
+				<p>* Yarışan robotların temel şasisi (tekerlekler ve çıkıntılar dahil olmak üzere) 225mm x 300mm’e sığmalıdır.</p>
+				<p>a) Maksimum genişlik (en) 225mm’den fazla olmamalıdır.</p>
+				<p>b) Maksimum uzunluk (boy) 300mm’den fazla olmamalıdır</p>
+				<p>* Spesifik görevler için robotlara önü en fazla 100mm büyütecek ek parçalar eklenebilir. Bu sebeple, üstüne ek parçalar ekli olan bir robotun en büyük boyutları 225 mm x
+					400 mm olabilir.</p>
+				<p>* Bir yükseklik limiti olmasa da lütfen ağırlık merkezi yukarıda olan robotların zorlanabileceklerini unutmayınız!</p>
+				<p>* Ek parça eklerken, ana şasi, Raspberry Pi ve kumanda düzenlemeleri aynı kalmalıdır.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Duman ve Ateş</h3>
+				<p>* Yarışmanın teması ne olursa olsun, robotunuz bilinçli olarak duman veya ateş yaymamalıdır.</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Görevler</h3>
+				<p>* Robotunuzu test edebileceğiniz birden fazla görev olacak ve her birinin sonucu net skorunuza katkıda bulunacaktır.</p>
+				<p>* Hiçbir görev zorunlu değildir.</p>
+				<p>* Katılmadığınız görevlerden puan kazanamazsınız.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row justify-content-center p-0" style="text-align: center;">
+			<div class="col-12 col-md-3 p-4">Copyright &copy 2018 Hisar CS</div>
+			<div class="col-12 col-lg-3 col-md-4 p-4">
+				<a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a> <a
+					href="https://www.facebook.com/hisarcs" class="p-2"
+				><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a> <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png"
+					style="width: 45px; height: 45px"
+				></a>
+			</div>
+			<div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align: center;">
+				<a class="back-to-top" href="#top"> <i class="fa fa-angle-up" style="font-size: 3vw;"></i>
+				<br> Back To Top
+				</a>
+			</div>
+		</div>
+	</div>
 </body>
