--- a/kurallar/pinoon.html
+++ b/kurallar/pinoon.html
@@ -1,140 +1,163 @@
 <!DOCTYPE html>
 <head>
-  <title>Pi Wars Turkey Kurallar</title>
-  <!-- Language Tag -->
-  <meta name="language" content="English"> 
+<title>Pi Wars Turkey Kurallar</title>
+<!-- Language Tag -->
+<meta name="language" content="English">
 
-  <!-- Style Meta Tags -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Style Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO Meta Tags -->
-  <meta name="keywords" content=""/>
+<!-- SEO Meta Tags -->
+<meta name="keywords" content="" />
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="Pi Wars Turkey" />
-  <meta property="og:type" content="site" />
-  <meta property="og:url" content="https://piwarsturkey.com" />
-  <meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
-  <meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" /> 
-  <meta property="og:site_name" content="Pi Wars Turkey" />
-  
-  <!-- Latest compiled and minified Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!-- Open Graph data -->
+<meta property="og:title" content="Pi Wars Turkey" />
+<meta property="og:type" content="site" />
+<meta property="og:url" content="https://piwarsturkey.com" />
+<meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
+<meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" />
+<meta property="og:site_name" content="Pi Wars Turkey" />
 
-  <!-- Latest compiled and minified Bootstrap JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<!-- Latest compiled and minified Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+>
 
-  <!-- Fonts -->
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<!-- Latest compiled and minified Bootstrap JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"
+></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"
+></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Latest Fontawesome CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<!-- Fonts -->
+<link rel="dns-prefetch" href="//fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
-  <!-- PiWarsTurkey main stylesheet -->
-  <link rel="stylesheet" href="../css/style2.css">
-  <link rel="stylesheet" href="../css/fontsize.css">
+<!-- Latest Fontawesome CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
-  <!-- PiWarsTurkey main script -->
-  <script src="../js/main.js"></script>
+<!-- PiWarsTurkey main stylesheet -->
+<link rel="stylesheet" href="../css/style2.css">
+<link rel="stylesheet" href="../css/fontsize.css">
+
+<!-- PiWarsTurkey main script -->
+<script src="../js/main.js"></script>
 </head>
 
 <body>
-  <!-- Image and text -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Ana Sayfa</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container-fluid imgBanner" style="text-align: center; padding-top:10vh; padding-bottom: 10vh;">
-    <h1>Pi Noon | Balon Savaşı</h1>
-    <h3>Balonları Patlat</h3>
-  </div>
-  <div class="container-fluid greysegment p-4">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-4">
-        <img src="../img/balonsavaşı.jpg" style="width:100%;">
-      </div>
-      <div class="col-12 col-md-4">
-        <h3>Görevin Amaci</h3>
-        <p>Rakip takımın balonlarını patlatmak</p>
-        <h3>Kontrol Metodu</h3>
-        <p>Uzaktan Kumanda</p>
-        <h3>Süre</h3>
-        <p>Düello başına 3 dakika</p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Kurallar</h3>
-        <p> * İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecektir.<p>
-        <p> * Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır. <p>
-        <p> * Düellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır. <p>
-        <p> * Yarışmacılar arenanın içine giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin sonuçlarında düellonun kaybedilmesi durumu olabilir.<p>
-        <p> * Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız mağlup sayılıcaktır.
-        <p> * Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir. <p>
-        <p> * Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevidir. <p>
-        <p> * Hakemin kararı sondur.<p>
-        <p>a) Lütfen tarışmayın - unutmayın, bu yarışmaların amacı eğlenmektir. <p>
-        <p>b) Takımınızdan birinin düelloyu kayıt etmesi (bir telefonla olabilir) tavsiye edilir. Bu sayede, hakem görsel kanıtlardan yararlanabilir. <p>
-        </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Ek Parça</h3>
-        <p> * Robotunuz, çapı 3 mm olan bir teli yerden 1 cm yukarıda tutabiliyor olaması gerekir. <p>
-        <p> * Tel robotunuzun önüne, ortaya, önünde başka bir şey olmayacak şekilde takılmalıdır.<p>
-        <p> a) Telin ağırlığı yaklaşık olarak bir askının ağırlığının yarısı kadar olacaktır.<p>
-        <p> b) Tel size yarışma gününde verilecektir.<p>
-        <p> c) Telin sadece görev sırasında robotun üstünde bulunması yeter.<p>
-        <p> d) Eğer tel robottan düşerse en fazla 2 kere teli robotunuza geri takmanıza izin verilecektir.<p>
-        <p> e) Eğer tel 3. kere düşerse, turu kaybetmiş sayılacaksınız.<p>
-        <p> f) Düşen teli ve robotu sahadan alma yetkisi sadece oyunun hakemindedir.<p>
-        </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">Puanlama</h3>
-        <p> * Her turun kazananı 30 puan alacak ve bir sonraki tura katılma hakkı kazanacaktır. <p>
-        <p> * Finalist 25 bonus puan kazanacaktır <p>
-        <p> * Finalin kazananı 40 bonus puan alacaktır.<p>
-        </p>
-      </div>
-      <div class="col-12 col-md-8">
-        <h3 style="text-align: center;">İpuçları</h3>
-        <p> * Ek parça (tel) robotun denge merkezini yükselterek dengeyi bozabilir. Robotunuzu tasarlarken bunu aklınızda bulundurun.<p>
-        <p> * Ek parçanın takılacağı kısmı robotunuza sağlam taktığınıza emin olun.<p>
-        <p> * PiWars’ın temin ettiği ek parça tutucusunu kullanmak zorunda değilsiniz, fakat kullanacağınız parçanın kablonun dönmesine izin vermediğine emin olmanızı şiddetle öneririz çünkü dönen kablolar robotun ağırlık merkezini değiştirerek nişan almayı çok zorlaştırıyor. <p>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-      <div class="row justify-content-center p-0" style="text-align: center;">
-        <div class="col-12 col-md-3 p-4">
-          Copyright &copy 2018 Hisar CS
-        </div>
-        <div class="col-12 col-lg-3 col-md-4 p-4">
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png" style="width: 45px; height: 45px"></a>
-        </div>
-        <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
-          <a class="back-to-top" href="#top">
-            <i class="fa fa-angle-up" style="font-size: 3vw;"></i><br>
-            Back To Top
-          </a>
-        </div>
-      </div>
-    </div>
+	<!-- Image and text -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+		<a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active"><a class="nav-link" href="#">Kurallar<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="/">Ana Sayfa</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container-fluid imgBanner" style="text-align: center; padding-top: 10vh; padding-bottom: 10vh;">
+		<h1>Pi Noon | Balon Savaşı</h1>
+		<h3>Balonları Patlat</h3>
+	</div>
+	<div class="container-fluid greysegment p-4">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-4">
+				<img src="../img/balonsavaşı.jpg" style="width: 100%;">
+			</div>
+			<div class="col-12 col-md-4">
+				<h3>Görevin Amaci</h3>
+				<p>Rakip takımın balonlarını patlatmak</p>
+				<h3>Kontrol Metodu</h3>
+				<p>Uzaktan Kumanda</p>
+				<h3>Süre</h3>
+				<p>Düello başına 3 dakika</p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Kurallar</h3>
+				<p>* İki robot, operatörün sürüş becerilerini ve robotun manevra kabiliyetini test edecek tahribatsız bir düelloda birbirleriyle karşı karşıya gelecektir.
+				<p>
+				<p>* Karşı takımın robotuna takılan balonları patlatmak için, robotlara takılan metal telin ucundaki iğneler kullanılmalıdır.
+				<p>
+				<p>* Düellolar, robotların sahayı terk etmesini engellemek için, etrafı kısa duvarlarla çevrili bir arenada yapılacaktır.
+				<p>
+				<p>* Yarışmacılar arenanın içine giremezler. Kablo bağlantılarıyla ilgili herhangi bir işlem için robotların sahanın kenarlarına sürülmesi gerekir. Arenaya girmenin
+					sonuçlarında düellonun kaybedilmesi durumu olabilir.
+				<p>
+				<p>* Kasıtlı olarak olduğunuz yerde dönemezsinz, eğer hakem bunu yaptığınız hissine kapılırsa size bir uyarı verecektir. İkinci bir uyarı alınması durumunda takımınız
+					mağlup sayılıcaktır.
+				<p>* Eğer 3 dakikanın sonunda, herhangi bir robot galip gelmezse, kararı, kontrol ve agresifliği değerlendiren oyun hakemi verecektir.
+				<p>
+				<p>* Başka bir robota verilen kasıtlı zarar, diskalifiyeye sebep olur. Zarar vermemeye özen göstermek, robotların sürücülerinin görevidir.
+				<p>
+				<p>* Hakemin kararı sondur.
+				<p>
+				<p>a) Lütfen tarışmayın - unutmayın, bu yarışmaların amacı eğlenmektir.
+				<p>
+				<p>b) Takımınızdan birinin düelloyu kayıt etmesi (bir telefonla olabilir) tavsiye edilir. Bu sayede, hakem görsel kanıtlardan yararlanabilir.
+				<p></p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Ek Parça</h3>
+				<p>* Robotunuz, çapı 3 mm olan bir teli yerden 1 cm yukarıda tutabiliyor olaması gerekir.
+				<p>
+				<p>* Tel robotunuzun önüne, ortaya, önünde başka bir şey olmayacak şekilde takılmalıdır.
+				<p>
+				<p>a) Telin ağırlığı yaklaşık olarak bir askının ağırlığının yarısı kadar olacaktır.
+				<p>
+				<p>b) Tel size yarışma gününde verilecektir.
+				<p>
+				<p>c) Telin sadece görev sırasında robotun üstünde bulunması yeter.
+				<p>
+				<p>d) Eğer tel robottan düşerse en fazla 2 kere teli robotunuza geri takmanıza izin verilecektir.
+				<p>
+				<p>e) Eğer tel 3. kere düşerse, turu kaybetmiş sayılacaksınız.
+				<p>
+				<p>f) Düşen teli ve robotu sahadan alma yetkisi sadece oyunun hakemindedir.
+				<p></p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">Puanlama</h3>
+				<p>* Her turun kazananı 30 puan alacak ve bir sonraki tura katılma hakkı kazanacaktır.
+				<p>
+				<p>* Finalist 25 bonus puan kazanacaktır
+				<p>
+				<p>* Finalin kazananı 40 bonus puan alacaktır.
+				<p></p>
+			</div>
+			<div class="col-12 col-md-8">
+				<h3 style="text-align: center;">İpuçları</h3>
+				<p>* Ek parça (tel) robotun denge merkezini yükselterek dengeyi bozabilir. Robotunuzu tasarlarken bunu aklınızda bulundurun.
+				<p>
+				<p>* Ek parçanın takılacağı kısmı robotunuza sağlam taktığınıza emin olun.
+				<p>
+				<p>* PiWars’ın temin ettiği ek parça tutucusunu kullanmak zorunda değilsiniz, fakat kullanacağınız parçanın kablonun dönmesine izin vermediğine emin olmanızı şiddetle
+					öneririz çünkü dönen kablolar robotun ağırlık merkezini değiştirerek nişan almayı çok zorlaştırıyor.
+				<p></p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row justify-content-center p-0" style="text-align: center;">
+			<div class="col-12 col-md-3 p-4">Copyright &copy 2018 Hisar CS</div>
+			<div class="col-12 col-lg-3 col-md-4 p-4">
+				<a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a> <a
+					href="https://www.facebook.com/hisarcs" class="p-2"
+				><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a> <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png"
+					style="width: 45px; height: 45px"
+				></a>
+			</div>
+			<div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align: center;">
+				<a class="back-to-top" href="#top"> <i class="fa fa-angle-up" style="font-size: 3vw;"></i>
+				<br> Back To Top
+				</a>
+			</div>
+		</div>
+	</div>
 </body>
