--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 				<hr style="border-color: #666;">
 				<div class="row">
 					<div class="col-12 col-lg-6">
-						<h5>22 Mart Cuma/h5>
+						<h5>22 Mart Cuma</h5>
 						<hr style="border-color: #666;">
 						<ul style="list-style: none; text-align: left; color: #eee;">
 							<li>08:30 - 09:00 &emsp; Kayıt &amp; Açılış</li>
